fix mobile sizing on safari

--- a/_sass/gcse.scss
+++ b/_sass/gcse.scss
@@ -57,7 +57,7 @@ main {
     background-color: #1a1a1a;
     box-shadow: var(--nice-shadow);
 }
-@media (width < 850px) {
+@media (max-width: 850px) {
     .lists {
         grid-auto-flow: row;
         grid-template-columns: 1fr;
